Fixes mirror scrollbar showing up on Firefox

--- a/css/Components/Mirror.scss
+++ b/css/Components/Mirror.scss
@@ -28,7 +28,7 @@ $Mirror-reflection-transform: 129px;
   width: 100%;
   height: 100%;
 
-  overflow-x: hidden;
+  overflow: hidden;
 
   pointer-events: none;
 
